# The-Big-Lebowski-Doodle-Jump

./: .gitignore  readme.md
code/: ActualGame.cpp  ActualGame.h  CMakeLists.txt  Camera.cpp  Camera.h  DisappearingPlatform.cpp  DisappearingPlatform.h  Doodler.cpp  Doodler.h  FallingPlatform.cpp  FallingPlatform.h  Font.cpp  Font.h  GameEngine.cpp  GameEngine.h  GameOver.cpp  GameOver.h  HorizontalPlatform.cpp  HorizontalPlatform.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Platform.cpp  Platform.h  PlatformAppearanceProbability.cpp  PlatformAppearanceProbability.h  RemovablePlatform.cpp  RemovablePlatform.h  Scores.cpp  Scores.h  Settings.cpp  Settings.h  TwitchingPlatform.cpp  TwitchingPlatform.h  main.cpp
scores/: bestScore.txt
